Fix for the top of the batch edit and directory manager that were falling behind the topbar.

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -113,7 +113,7 @@ div[gn-transfer-ownership] * .list-group {
   .gn-editor-board {
     padding-top: 120px;
   }
-  .gn-editor-container {
+  .gn-editor-container, .gn-batch-editor, #gn-directory-container { {
     padding-top: 65px;
   }
 }
